# DRF-project

./: .env_sample  .gitignore  Dockerfile  README.md  block_user_task.json  coverage.txt  docker-compose.yml  lms.json  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  docs.py  models.py  paginators.py  permission.py  services.py  tasks.py  tests.py  urls.py  validators.py
lms/migrations/: 0001_initial.py  0002_payment.py  0003_alter_course_options_alter_lesson_options_and_more.py  0004_alter_course_owner_alter_lesson_owner.py  0005_subscription.py  0006_alter_lesson_options.py  0007_alter_course_options.py
lms/serializers/: course.py  jwt.py  lesson.py  payment.py  subscription.py
lms/views/: course.py  jwt.py  lesson.py  payment.py  subscription.py
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
